--- a/src/Component/VideoChat/VideoChat.module.scss
+++ b/src/Component/VideoChat/VideoChat.module.scss
@@ -6,7 +6,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 100vh;
+  height: 100%;
   padding: 40px 100px;
   background-image: none;
   text-align: center;
@@ -28,8 +28,8 @@
       background-image: url("../../assets/image/videochat/mobile.png");
       width: 259px;
       height: 516px;
-      .wrapperChat{
-        p{
+      .wrapperChat {
+        p {
           display: none;
         }
       }
