--- a/src/Component/FeedBackSlider/FeedBackSlider.module.scss
+++ b/src/Component/FeedBackSlider/FeedBackSlider.module.scss
@@ -2,71 +2,75 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  padding: 24px 80px;
-  font-family: Open Sans;
-  text-align: center;
+  padding: 48px 16px;
+
+  h2 {
+    text-align: center;
+    font-size: 32px;
+  }
 
   .card {
     display: flex !important;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
     gap: 20px;
-    margin: 6px;
-    padding: 20px;
-    height: 460px;
-
+    margin: 0 auto;
+    width: 100%;
 
     .title {
       display: flex;
       flex-direction: column;
-      align-items: center;
       gap: 8px;
-      font-size: 14px;
       padding: 20px;
-      box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.05);
       background: var(--ffffff-white, #FFF);
+      box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.05);
+    }
+
+    .wrapperAuthorDetails {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        height: 60px;
+        width: 60px;
+      }
+
+      span:nth-child(2) {
+        font-family: Montserrat, Arial, sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+      }
+
+      span:last-child {
+        font-family: Open Sans, sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+      }
     }
   }
-
-  button {
-    align-self: center;
+  button{
+    margin: 30px auto;
+    width: 100%;
   }
 }
 
-@media screen and (min-width: 900px) and (max-width: 992px) {
-  .card {
-    width: 424px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .card {
-    width: 248px;
-
-    h2 {
-      font-size: 32px;
+@media (min-width: 768px) {
+  .sliderContainer {
+    .title {
+      min-height: 260px;
+      width: 100%;
+    }
+    button{
+      width: 226px;
     }
   }
 }
 
-.wrapperAuthorDetails {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: Open Sans;
-
-  span {
-
-    &:nth-child(2) {
-      font-family: Montserrat;
-      font-size: 18px;
-      font-weight: 700;
-      line-height: 28px;
-    }
-
-    &:last-child {
-      font-family: Open Sans;
-    }
+@media (min-width: 992px) {
+  .title {
+    height: 100%;
+    width: 100%;
   }
-}
 
+}
