--- a/src/Component/JoinSection/JoinSection.module.scss
+++ b/src/Component/JoinSection/JoinSection.module.scss
@@ -9,9 +9,11 @@
   gap: 40px;
   padding: 80px 0;
   color: #FFFFFF;
+  text-align: center;
 
   .registrationBenefits {
     display: flex;
+    justify-content: center;
     gap: 120px;
     text-align: center;
 
@@ -46,17 +48,32 @@
   @media screen and (max-width: 480px) {
     background: transparent;
     gap: 0;
+
     .wrapperTitle {
       background-image: url("../../assets/image/joinsection/manG.svg");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
       text-align: center;
+      h2{
+        font-size: 32px;
+      }
+
 
       .registrationBenefits {
         display: flex;
         flex-direction: column;
         gap: 20px;
+        p{
+          font-family: Montserrat;
+          font-size: 24px;
+          font-weight: 600;
+        }
+        span{
+          font-family: Montserrat;
+          font-size: 16px;
+          font-weight: 500;
+        }
       }
     }
     .registerImg {
