--- a/src/Component/TargetAddSlider/TargetAddSlider.module.scss
+++ b/src/Component/TargetAddSlider/TargetAddSlider.module.scss
@@ -9,16 +9,28 @@
   h2 {
     text-align: center;
   }
+  h3{
+    font-size: 24px;
+    font-weight: 500;
+  }
 
   .sliderItem {
     display: flex !important;
-    flex-direction: column;
+    flex-direction: column!important;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: center!important;
     gap: 16px;
-    width: 330px !important;
-    height: 328px !important;
+    width: 100% !important;
     padding-right: 12px;
+    text-align: center;
+    img{
+      height: 200px;
+      width: 200px;
+    }
+    p{
+      font-size: 16px;
+      font-weight: 400;
+    }
   }
 
   button {
@@ -26,6 +38,7 @@
     width: 202px;
     height: 60px;
     padding: 12px 24px;
+    margin-top: 30px;
   }
 }
 
