--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,8 +3,6 @@
 
 body {
     margin: 0;
-
-
 }
 
 #root {
@@ -113,4 +111,28 @@ a {
 
 a:hover {
     opacity: 0.7;
+}
+
+.slick-next:before {
+    content: '>' !important;
+    font-size: 30px !important;
+}
+
+.slick-prev:before {
+    content: '<' !important;
+    font-size: 30px !important;
+}
+
+.slick-dots li button:before {
+    color: #858585 !important;
+    font-size: 9px !important;
+    opacity: 1 !important;
+}
+
+.slick-dots li.slick-active button:before {
+    font-size: 15px !important;
+}
+
+.slick-dots {
+    bottom: -60px !important;
 }
